Added decorative fonts to .css

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Redressed&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap');
+
+body {
+    font-family: 'Work Sans', sans-serif;
+}
+
+.title {
+    font-family: 'Redressed', cursive;
+}
+
 .journalForm {
     display: flex;
     flex-direction: column;
