--- a/styles/main.css
+++ b/styles/main.css
@@ -36,3 +36,23 @@ body {
     min-width: 200px;
     max-width:500px;
 }
+
+.journalForm_submit {
+    max-width:200px;
+    margin: .5em 0 0 2px;
+    padding: .5em;
+    font-size:1em;
+    border:0;
+    cursor: pointer;
+    color:rgb(44, 26, 26);
+}
+.journalForm_submit:hover,
+.journalForm_submit:focus {
+    color:white;
+    background: #0053ba;
+}
+
+.journalForm_submit:focus {
+    outline: 1px solid #fff;
+    outline-offset: -4px;
+}
